@@ -3,15 +3,17 @@ package io.pello.codewars.urlmap;
 import java.net.URL;
 import java.util.HashMap;
 import java.util.Map;
+import java.math.BigInteger;
 
 public class UrlMap {
-	private Map<Long, Long> table = new HashMap<Long, Long>();
+	private Map<BigInteger, Long> table = new HashMap<BigInteger, Long>();
 	
-	public void setTimestamp(URL url, long timestamp) {
-	    table.put(new Long(System.identityHashCode(url))*new Long(9999* url.toString().length()),timestamp);
-	  }
+	
+	public synchronized void setTimestamp(URL url, long timestamp) {
+	    table.put(BigInteger.valueOf(System.identityHashCode(url)).shiftLeft(url.toString().length()),timestamp);
+	  }//  new Long(System.identityHashCode(url))*new Long(9999999 * )
 
 	public long getTimestamp(URL url) {
-		return table.getOrDefault(new Long(System.identityHashCode(url))*new Long(9999* url.toString().length()),-1L);
+		return table.getOrDefault(BigInteger.valueOf(System.identityHashCode(url)).shiftLeft(url.toString().length()),-1L);
 	}
 }
